# spiritual_realm_projects

./: .flake8  .gitignore  =0.18.0  CHANGELOG.md  DEPLOYMENT_CHECKLIST_v1.0.0.md  Makefile  README.md  RELEASE_NOTES_v1.0.0-rc1.md  pyproject.toml  requirements.txt  setup.py
config/: backend.example.yaml  config.example.yaml  optimization.example.yaml  system.example.json
docs/: From Infant to Adult_ A Multi‑Stage Curriculum for Training a General AI.md  anomaly_detection_implementation_summary.md  anomaly_detector_fixes.md  api_reference.md  auto_tuner_implementation_summary.md  benchmark_completion_summary_2026_01_28.md  benchmark_final_report_2026_01_28.md  benchmark_guide.md  benchmark_phase_1_validation_2026_01_28.md  benchmark_phase_2_latency_2026_01_28.md  benchmark_phase_3_memory_2026_01_28.md  benchmark_phase_4_throughput_2026_01_28.md  benchmark_progress_2026_01_28.md  checkpoint_12_batching_caching_summary.md  checkpoint_18_advanced_features_summary.md  checkpoint_18_complete_fix_summary.md  checkpoint_18_partial_fix_summary.md  checkpoint_18_test_fixes.md  checkpoint_23_final_completion_summary.md  checkpoint_23_final_validation_summary.md  checkpoint_23_fixes_applied.md  checkpoint_6_engine_fallback_summary.md  code_quality_assessment_2026_01_28.md  code_quality_phase_2_complete_2026_01_28.md  complete_test_suite_validation_2026_01_28.md  complete_test_suite_validation_final_2026_01_28.md  consciousness_api.md  consciousness_guide.md  cost_tracking_implementation.md  critical_code_fixes_2026_01_28.md  documentation_update_2026_01_28.md  hardware_acceleration_summary_2026_01_28.md  implementation_roadmap_2026_01_30.md  integration_test_api_fixes_summary.md  lesson_pack_structured_output_mvp_implementation.md  minor_test_fixes_2026_01_28.md  multi_gpu_implementation_summary.md  next_steps_2026_01_28.md  next_steps_after_checkpoint_23.md  next_steps_plan.md  (+57 more)
examples/: anomaly_detection_demo.py  auto_tuner_demo.py  kv_cache_demo.py  mode_aware_routing_demo.py  multi_gpu_demo.py  new_workflows_demo.py  observability_demo.py  openvino_backend_switching.py  openvino_basic_usage.py  openvino_demo.py  openvino_performance_comparison.py  phase_b_orchestration_demo.py  router_demo.py  runtime_config_demo.py  serialization_demo.py  workflow_registry_demo.py
mm_orch/: __init__.py  __main__.py  config.py  error_handler.py  exceptions.py  logger.py  main.py  metrics.py  orchestrator.py  retry.py  router.py  schemas.py  version.py
scripts/: check_hardware.py  export_to_openvino.py  generate_benchmark_report.py  release.py  run_gpt2_e2e_test.py  run_latency_benchmarks.py  run_memory_benchmarks.py  run_regression_tests.py  test_openvino_npu.py  (+3 more)
(+300 files in other folders)
